fix: better scrollbar styles and proper input bg color

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 
 *::-webkit-scrollbar {
-  @apply rounded-md h-2 sm:h-3;
+  @apply rounded-md w-2 h-2;
 }
 
 *::-webkit-scrollbar-track {
